flux/clusters/cumulus/applications/mailu/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mailu
  labels:
    app.kubernetes.io/name: mailu
    app.kubernetes.io/instance: mailu
